--- a/index.html
+++ b/index.html
@@ -2,9 +2,68 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Simple Blog</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
+	<header>
+		<h1>Stock photos that don’t suck</h1>
+		<p>A list of places to find the best free stock photos</p>
+		<img src="img/bg.jpg" alt="Simple Blog">
+	</header>
+	<section>
+		<img src="img/profile.jpg" alt="Dustin Senos">
+		<h2>Dustin Senos</h2>
+		<p>Art &  Design</p>
+		<p>22 January 2014</p>
+		<article>
+			<p>Finding great stock photos is a pain. You’re left with either low-res amateur photos, people wearing cheesy headsets, or photos that are out of budget for the project you’re working on. Below is an ongoing list (so bookmark it) of the best stock photo sites I’ve come across.
+</p>
+			<ul>
+				<li>Little Visuals <a href="http://littlevisuals.co/"> http://littlevisuals.co/</a>
+</li>
+				<li>Unsplash<a href="http://unsplash.com/">http://unsplash.com/</a></li>
+				<li>Death to the Stock Photo<a href="http://join.deathtothestockphoto.com/">http://join.deathtothestockphoto.com/</a></li>
+				<li>New Old Stock<a href="http://nos.twnsnd.co/"></a>http://nos.twnsnd.co/</li>
+				<li>Superfamous (requires attribution)<a href="http://superfamous.com/">http://superfamous.com/</a></li>
+				<li>Picjumbo<a href="http://picjumbo.com/">http://picjumbo.com/</a></li>
+				<li>The Pattern Library<a href="http://thepatternlibrary.com/">http://thepatternlibrary.com/</a></li>
+				<li>Gratisography <a href="http://www.gratisography.com/">http://www.gratisography.com/</a></li>
+				<li>Getrefe <a href="http://getrefe.tumblr.com/">http://getrefe.tumblr.com/</a></li>
+				<li>IM Free (requires attribution)<a href="http://imcreator.com/free">http://imcreator.com/free</a></li>
+				<li>Jay Mantri<a href="http://jaymantri.com/">http://jaymantri.com/</a></li>
+				<li>Public Domain Archive<a href="http://publicdomainarchive.com/">http://publicdomainarchive.com/</a></li>
+			</ul>
+		</article>
+	</section>
+	<h3>Leave a Reply</h3>
+	<form action="">
+		<input type="text" placeholder="Your Name"/>
+		<input type="email" placeholder="Please Enter Your Message"/>
+		<button><p>Add Comment</p></button>
+	</form>
+	<aside>
+		<h4>Share this Post</h4>
+		<p>If you like this article, please take a second to share it with the world and help idealUI grow!</p>
+		<ul>
+			<li><a href="#" target="_blank"><i class="fa fa-facebook"></i>Facebook
+</a></li>
+			<li><a href="#" target="_blank"><i class="fa fa-twitter"></i>Twitter</a></li>
+			<li><a href="#" target="_blank"><i class="fa fa-pinterest-p"></i>pinterest</a></li>
+			<li><a href="#" target="_blank"><i class="fa fa-google-plus"></i>Google +</a></li>
+		</ul>
+	</aside>
+	<nav>
+		<img src="img/previous.jpg" alt="Previous">
+		<p>Previous</p>
+		<p>How To Get Started your own creative studio</p>
+		<img src="img/next.jpg" alt="Next">
+		<p>Next</p>
+		<p>Enhancing User Experience With The Web Speech API</p>
+	</nav>
+	<footer>
+		<p>&copy;2015 SAGE Multipurpose Theme. Made by idealUI</p>
+	</footer>
 	
 </body>
 </html>
