--- a/index.html
+++ b/index.html
@@ -46,20 +46,27 @@
 		<h4>Share this Post</h4>
 		<p>If you like this article, please take a second to share it with the world and help idealUI grow!</p>
 		<ul>
-			<li><a href="#" target="_blank"><i class="fa fa-facebook"></i>Facebook
-</a></li>
+			<li><a href="#" target="_blank"><i class="fa fa-facebook"></i>Facebook</a></li>
 			<li><a href="#" target="_blank"><i class="fa fa-twitter"></i>Twitter</a></li>
 			<li><a href="#" target="_blank"><i class="fa fa-pinterest-p"></i>pinterest</a></li>
 			<li><a href="#" target="_blank"><i class="fa fa-google-plus"></i>Google +</a></li>
 		</ul>
 	</aside>
 	<nav>
-		<img src="img/previous.jpg" alt="Previous">
-		<p>Previous</p>
-		<p>How To Get Started your own creative studio</p>
-		<img src="img/next.jpg" alt="Next">
-		<p>Next</p>
-		<p>Enhancing User Experience With The Web Speech API</p>
+		<figure>
+			<a href="#">
+				<img src="img/previous.jpg" alt="Previous">
+				<h4>Previous</h4>
+				<figcaption>How To Get Started your own creative studio</figcaption>
+			</a>
+		</figure>
+		<figure>
+			<a href="#">
+				<img src="img/next.jpg" alt="Next">
+				<h4>Next</h4>
+				<figcaption>Enhancing User Experience With The Web Speech API</figcaption>
+			</a>
+		</figure>
 	</nav>
 	<footer>
 		<p>&copy;2015 SAGE Multipurpose Theme. Made by idealUI</p>
