--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 				<img src="img/profile.jpg" alt="Dustin Senos">
 			</figure> 
 			<h2>Dustin Senos</h2>
-			<p>Art &  Design</p>
+			<p class="work">Art &  Design</p>
 			<p>22 January 2014</p>
 			</div>
+			<div class="container-content">
 				<p>Finding great stock photos is a pain. You’re left with either low-res amateur photos, people wearing cheesy headsets, or photos that are out of budget for the project you’re working on. Below is an ongoing list (so bookmark it) of the best stock photo sites I’ve come across.</p>
 			<ul>
 				<li>Little Visuals <a href="http://littlevisuals.co/" target="_blank"> http://littlevisuals.co/</a></li>
@@ -43,6 +44,7 @@
 				<li>Jay Mantri<a href="http://jaymantri.com/">http://jaymantri.com/</a></li>
 				<li>Public Domain Archive<a href="http://publicdomainarchive.com/">http://publicdomainarchive.com/</a></li>
 			</ul>
+			</div>
 		</section>
 		<section>	
 			<h3>Leave a Reply</h3>
