--- a/index.html
+++ b/index.html
@@ -14,44 +14,44 @@
 <article>
 	<header>
 		<div class="over-image">
-		<h1>Stock photos that don’t suck</h1>
-		<h2>A list of places to find the best free stock photos</h2> 
+			<h1>Stock photos that don’t suck</h1>
+			<h2>A list of places to find the best free stock photos</h2> 
 		</div>
 	</header>
 	<div class="container">
 		<section>
 			<div class="container-pro">
-			<figure>
-				<img src="img/profile.jpg" alt="Dustin Senos">
-			</figure> 
-			<h2>Dustin Senos</h2>
-			<p class="work">Art &  Design</p>
-			<p>22 January 2014</p>
+				<figure>
+					<img src="img/profilepic.png" alt="Dustin Senos">
+				</figure> 
+				<h2>Dustin Senos</h2>
+				<p class="light">Art &  Design</p>
+				<p>22 January 2014</p>
 			</div>
 			<div class="container-content">
 				<p>Finding great stock photos is a pain. You’re left with either low-res amateur photos, people wearing cheesy headsets, or photos that are out of budget for the project you’re working on. Below is an ongoing list (so bookmark it) of the best stock photo sites I’ve come across.</p>
-			<ul>
-				<li>Little Visuals <a href="http://littlevisuals.co/" target="_blank"> http://littlevisuals.co/</a></li>
-				<li>Unsplash<a href="http://unsplash.com/">http://unsplash.com/</a></li>
-				<li>Death to the Stock Photo<a href="http://join.deathtothestockphoto.com/">http://join.deathtothestockphoto.com/</a></li>
-				<li>New Old Stock<a href="http://nos.twnsnd.co/"></a>http://nos.twnsnd.co/</li>
-				<li>Superfamous (requires attribution)<a href="http://superfamous.com/">http://superfamous.com/</a></li>
-				<li>Picjumbo<a href="http://picjumbo.com/">http://picjumbo.com/</a></li>
-				<li>The Pattern Library<a href="http://thepatternlibrary.com/">http://thepatternlibrary.com/</a></li>
-				<li>Gratisography <a href="http://www.gratisography.com/">http://www.gratisography.com/</a></li>
-				<li>Getrefe <a href="http://getrefe.tumblr.com/">http://getrefe.tumblr.com/</a></li>
-				<li>IM Free (requires attribution)<a href="http://imcreator.com/free">http://imcreator.com/free</a></li>
-				<li>Jay Mantri<a href="http://jaymantri.com/">http://jaymantri.com/</a></li>
-				<li>Public Domain Archive<a href="http://publicdomainarchive.com/">http://publicdomainarchive.com/</a></li>
-			</ul>
+				<ul>
+					<li>Little Visuals <a href="http://littlevisuals.co/" target="_blank"> http://littlevisuals.co/</a></li>
+					<li>Unsplash<a href="http://unsplash.com/">http://unsplash.com/</a></li>
+					<li>Death to the Stock Photo<a href="http://join.deathtothestockphoto.com/">http://join.deathtothestockphoto.com/</a></li>
+					<li>New Old Stock<a href="http://nos.twnsnd.co/"></a>http://nos.twnsnd.co/</li>
+					<li>Superfamous (requires attribution)<a href="http://superfamous.com/">http://superfamous.com/</a></li>
+					<li>Picjumbo<a href="http://picjumbo.com/">http://picjumbo.com/</a></li>
+					<li>The Pattern Library<a href="http://thepatternlibrary.com/">http://thepatternlibrary.com/</a></li>
+					<li>Gratisography <a href="http://www.gratisography.com/">http://www.gratisography.com/</a></li>
+					<li>Getrefe <a href="http://getrefe.tumblr.com/">http://getrefe.tumblr.com/</a></li>
+					<li>IM Free (requires attribution)<a href="http://imcreator.com/free">http://imcreator.com/free</a></li>
+					<li>Jay Mantri<a href="http://jaymantri.com/">http://jaymantri.com/</a></li>
+					<li>Public Domain Archive<a href="http://publicdomainarchive.com/">http://publicdomainarchive.com/</a></li>
+				</ul>
 			</div>
 		</section>
-		<section>	
+		<section id="container-form">	
 			<h3>Leave a Reply</h3>
 			<form action="">
-				<input type="text" placeholder="Your Name"/>
-				<input type="email" placeholder="Please Enter Your Message"/>
-				<button><p>Add Comment</p></button>
+				<input class="name" type="text" placeholder="Your Name"/>
+				<input class="message" type="email" placeholder="Please Enter Your Message"/>
+				<button>Add Comment</button>
 			</form>
 		</section>
 	</div>
@@ -62,26 +62,26 @@
 			<ul>
 				<li><a href="#" target="_blank"><i class="fa fa-facebook"></i>Facebook</a></li>
 				<li><a href="#" target="_blank"><i class="fa fa-twitter"></i>Twitter</a></li>
-				<li><a href="#" target="_blank"><i class="fa fa-pinterest-p"></i>pinterest</a></li>
+				<li><a href="#" target="_blank"><i class="fa fa-pinterest"></i>pinterest</a></li>
 				<li><a href="#" target="_blank"><i class="fa fa-google-plus"></i>Google +</a></li>
 			</ul>
 		</aside>
-	<nav>
-		<figure>
+	<section class="available group">
+		<figure id="previous">
 			<img src="img/previous.jpg" alt="Previous">
 			<h4>Previous</h4>
 			<a href="#">
 				<figcaption>How To Get Started your own creative studio</figcaption>
 			</a>
 		</figure>
-		<figure>
+		<figure id="next">
 			<img src="img/next.jpg" alt="Next">
 			<h4>Next</h4>
 			<a href="#">
 				<figcaption>Enhancing User Experience With The Web Speech API</figcaption>
 			</a>
 		</figure>
-	</nav>
+	</section>
 	<footer>
 		<p>&copy;2015 SAGE Multipurpose Theme. Made by idealUI</p>
 	</footer>
