CSS positioning fixes
Had a lot of conflicts with the position declarations in the css file.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <body>
 <article>
 	<header>
-		<div class="over-image">
-			<h1>Stock photos that don’t suck</h1>
-			<h2>A list of places to find the best free stock photos</h2> 
+		<div class="title-wrapper">
+			<div class="title">
+				<h1>Stock photos that don’t suck</h1>
+				<h2>A list of places to find the best free stock photos</h2> 
+			</div>
 		</div>
 	</header>
 	<div class="container">
